--- a/1-Introduction/04-stats-and-probability/assignmentassignment.ipynb
+++ b/1-Introduction/04-stats-and-probability/assignmentassignment.ipynb
@@ -25,7 +25,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Connect Drive to Colab"
+        "Connect Drive to Colab and change dictionary"
       ],
       "metadata": {
         "id": "FzYwjTTv8ZdA"
