--- a/1-Introduction/04-stats-and-probability/notebook.ipynb
+++ b/1-Introduction/04-stats-and-probability/notebook.ipynb
@@ -426,7 +426,7 @@
     }
    ],
    "source": [
-    "df['Weight'].hist(bins=15, figsize=(10,6))\n",
+    "df['Weight'].hist(bins=15, figsize=(10,6), color='purple')\n",
     "plt.suptitle('Weight distribution of MLB Players')\n",
     "plt.xlabel('Weight')\n",
     "plt.ylabel('Count')\n",
